fix service list bg on iOS

--- a/craft/assets/css/custom/_feat-case-studies.css
+++ b/craft/assets/css/custom/_feat-case-studies.css
@@ -44,6 +44,7 @@
     }
     @media (min-width: 993px) {
       top: -75%;
+      transform: scale(1);
     }
     @media (min-width: 1040px) {
       left: -300px;
@@ -83,6 +84,7 @@
     @media (min-width: 993px) {
       top: -160px;
       left: -230px;
+      transform: scale(1);
     }
   }
 }
